# ctci6

./: .gitignore  CMakeLists.txt  cpp_style.txt
cpp/01_arrays_and_strings/q1_02_check_permutation/: q1_02_check_permutation.cpp
cpp/01_arrays_and_strings/q1_04_palindrome_permutation/: q1_04_palindrome_permutation.cpp
cpp/01_arrays_and_strings/q1_05_one_away/: q1_05_one_away.cpp
cpp/01_arrays_and_strings/q1_06_string_compression/: q1_06_string_compression.cpp
cpp/01_arrays_and_strings/q1_07_rotate_matrix/: q1_07_rotate_matrix.cpp
cpp/01_arrays_and_strings/q1_08_zero_matrix/: q1_08_zero_matrix.cpp
cpp/ch01_arrays_and_strings/q1_01_is_unique/: is_unique.cpp  q1_01_is_unique.cpp
cpp/ch01_arrays_and_strings/q1_02_check_permutation/: check_permutation.cpp
cpp/ch01_arrays_and_strings/q1_03_urlify/: q1_03_urlify.cpp  urlify.cpp
cpp/ch01_arrays_and_strings/q1_04_palindrome_permutation/: palindrome_permutation.cpp  q1_04_palindrome_permutation.cpp
cpp/ch01_arrays_and_strings/q1_05_one_away/: one_away.cpp  q1_05_one_away.cpp
cpp/ch01_arrays_and_strings/q1_06_string_compression/: q1_06_string_compression.cpp  string_compression.cpp
cpp/ch01_arrays_and_strings/q1_07_rotate_matrix/: q1_07_rotate_matrix.cpp  rotate_matrix.cpp
cpp/ch01_arrays_and_strings/q1_08_zero_matrix/: q1_08_zero_matrix.cpp  zero_matrix.cpp
cpp/ch01_arrays_and_strings/q1_09_string_rotation/: string_rotation.cpp
cpp/ch02_linked_lists/q2_01_remove_dups/: remove_dups.cpp
cpp/ch02_linked_lists/q2_02_return_kth_to_last/: return_kth_to_last.cpp
cpp/ch02_linked_lists/q2_03_delete_middle_node/: delete_middle_node.cpp
cpp/ch02_linked_lists/q2_04_partition/: partition.cpp
cpp/ch02_linked_lists/q2_05_sum_lists/: sum_lists.cpp
cpp/ch02_linked_lists/q2_07_intersection/: intersection.cpp
cpp/ch02_linked_lists/q2_08_loop_detection/: loop_detection.cpp
cpp/ch03_stacks_and_queues/q3_01_three_in_one/: three_in_one.cpp
cpp/ch03_stacks_and_queues/q3_02_stack_min/: stack_min.cpp
cpp/ch03_stacks_and_queues/q3_03_stack_of_plates/: stack_of_plates.cpp
cpp/ch03_stacks_and_queues/q3_04_queue_via_stacks/: queue_via_stacks.cpp
cpp/ch03_stacks_and_queues/q3_05_sort_stack/: sort_stack.cpp
cpp/ctcilib/ctcilib/: BTreePrinter.cpp  assorted_methods.cpp
include/: is_unique.h
include/arrays_and_strings/: check_permutation.h  is_unique.h  one_away.h  palindrome_permutation.h  string_compression.h  urlify.h
lib/ctcilib/: BTreePrinter.h  BitVector.cpp  BitVector.h  CMakeLists.txt  HashMapList.cpp  HashMapList.h  LinkedListNode.cpp  LinkedListNode.h  TreeNode.cpp  TreeNode.h  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  assorted_methods.cpp
lib/ctcilib/include/ctcilib/: BTreePrinter.h  HashMapList.h  LinkedListNode.h  TreeNode.h  Trie.h  assorted_methods.h
lib/ctcilib/src/: BitVector.cpp  Trie.cpp  assorted_methods.cpp
src/: is_unique.cpp
src/arrays_and_strings/: check_permutation.cpp  is_unique.cpp  one_away.cpp  palindrome_permutation.cpp  string_compression.cpp  urlify.cpp
test/ch01_arrays_and_strings/q01_is_unique/: main.cpp
test/ch01_arrays_and_strings/q02_check_permutation/: main.cpp
test/ch01_arrays_and_strings/q03_urlify/: main.cpp
test/ch01_arrays_and_strings/q04_palindrome_permutation/: main.cpp
test/ch01_arrays_and_strings/q05_one_away/: main.cpp
test/ch01_arrays_and_strings/q06_string_compression/: main.cpp  string_compression.cpp
test/ch01_arrays_and_strings/q07_rotate_matrix/: main.cpp
test/ch01_arrays_and_strings/q08_zero_matrix/: main.cpp  zero_matrix.cpp
test/ch01_arrays_and_strings/q09_string_rotation/: main.cpp
test/ch01_arrays_and_strings/q1_01_is_unique/: main.cpp
test/ch01_arrays_and_strings/q1_03_urlify/: urlify.cpp
test/ch02_linked_lists/q01_remove_dups/: main.cpp
test/ch02_linked_lists/q02_return_kth_to_last/: main.cpp  return_kth_to_last.cpp
test/ch02_linked_lists/q03_delete_middle_node/: main.cpp
test/ch02_linked_lists/q04_partition/: main.cpp
test/ch02_linked_lists/q05_sum_lists/: main.cpp
test/ch02_linked_lists/q06_palindrome/: main.cpp
test/ch02_linked_lists/q07_intersection/: main.cpp
test/ch02_linked_lists/q08_loop_detection/: main.cpp
test/ch03_stacks_and_queues/introduction/: MyQueue.h  MyStack.h
test/ch03_stacks_and_queues/q01_three_in_one/: FixedMultiStack.h  MultiStack.h  main.cpp
test/ch03_stacks_and_queues/q02_stack_min/: NodeWithMin.h  StackWithNodeMin.h  StackWithStackMin.h  main.cpp
test/ch03_stacks_and_queues/q03_stack_of_plates/: SetOfStacks.h  main.cpp
test/ch03_stacks_and_queues/q04_queue_via_stacks/: MyQueue.h  main.cpp
test/ch03_stacks_and_queues/q05_sort_stack/: main.cpp
test/ch03_stacks_and_queues/q06_animal_shelter/: Animal.cpp  Animal.h  AnimalQueue.cpp  AnimalQueue.h  Cat.cpp  Cat.h  Dog.cpp  Dog.h  main.cpp
test/ch03_stacks_and_queues/q3_04_queue_via_stacks/: queue_via_stacks.cpp
test/ch03_stacks_and_queues/q3_06_animal_shelter/: animal_shelter.cpp
test/ch04_trees_and_graphs/q01_route_between_nodes/: Graph.cpp  Graph.h  Node.cpp  Node.h  main.cpp
test/ch04_trees_and_graphs/q02_minimal_tree/: main.cpp
test/ch04_trees_and_graphs/q03_list_of_depths/: main.cpp
test/ch04_trees_and_graphs/q04_check_balanced/: main.cpp
test/ch04_trees_and_graphs/q05_validate_bst/: main.cpp
test/ch04_trees_and_graphs/q06_successor/: main.cpp
test/ch04_trees_and_graphs/q07_build_order/: Graph.cpp  Graph.h  Project.cpp  Project.h  main.cpp
test/ch04_trees_and_graphs/q08_first_common_ancestor/: main.cpp
test/ch04_trees_and_graphs/q09_bst_sequences/: main.cpp
test/ch04_trees_and_graphs/q10_check_subtree/: main.cpp
test/ch04_trees_and_graphs/q11_random_node/: Tree.cpp  Tree.h  main.cpp
test/ch04_trees_and_graphs/q12_paths_with_sum/: main.cpp
test/ch05_bit_manipulation/q01_insertion/: main.cpp
test/ch05_bit_manipulation/q02_binary_to_string/: main.cpp
test/ch05_bit_manipulation/q03_flip_bit_to_win/: main.cpp
test/ch05_bit_manipulation/q04_next_number/: main.cpp
test/ch05_bit_manipulation/q05_debugger/: main.cpp
test/ch05_bit_manipulation/q06_conversion/: main.cpp
(+104 files in other folders)
