cmake_minimum_required(VERSION 3.20)
include_directories(include lib)

set(PROJECT_NAME ctci6)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(LIBRARIES_DIR lib)
set(LIBRARIES ctcilib)

project(${PROJECT_NAME})

function(add_question_standard CHAPTER QUESTION)
    set(number_pattern "^[0-9][0-9]$")
    if(CHAPTER MATCHES ${number_pattern} AND QUESTION MATCHES ${number_pattern})
        file(GLOB chapters "test/*")
        foreach(chapter_path ${chapters})
            if(chapter_path MATCHES "test\/ch${CHAPTER}_[a-z_]+$")
                file(GLOB questions "${chapter_path}/*")
                foreach(question_path ${questions})
                    if(question_path MATCHES "${chapter_path}\/q${QUESTION}_[a-z_]+$")
                        set(standard_pattern "test\/ch${CHAPTER}_([a-z_]+)\/q${QUESTION}_([a-z_]+)$")
                        if(EXISTS "${question_path}/main.cpp" AND ${question_path} MATCHES ${standard_pattern})
                            set(executable_name "q${CHAPTER}_${QUESTION}")
                            file(GLOB EXECUTABLE_SET CONFIGURE_DEPENDS "${question_path}/*.h" "${question_path}/*.cpp")
                            file(GLOB SOURCE_SET CONFIGURE_DEPENDS "src/${CMAKE_MATCH_1}/*.cpp")
                            file(GLOB HEADER_SET CONFIGURE_DEPENDS "include/${CMAKE_MATCH_1}/*.h")
                            list(APPEND EXECUTABLE_SET ${SOURCE_SET} ${HEADER_SET})
                            add_executable(${executable_name} ${EXECUTABLE_SET})
                            target_link_libraries(${executable_name} ${LIBRARIES})
                        endif()                         
                        break()
                    endif()
                endforeach()
                break()
            endif() 
        endforeach()
    endif()
endfunction()

foreach(LIBRARY ${LIBRARIES})
    add_subdirectory("${LIBRARIES_DIR}/${LIBRARY}")
endforeach(LIBRARY)

# add_question_standard(01 01)
# add_question_standard(01 02)
# add_question_standard(01 03)
# add_question_standard(01 04)
# add_question_standard(01 05)
# add_question_standard(01 06)
# add_question_standard(01 07)
# add_question_standard(01 08)
# add_question_standard(01 09)
# add_question_standard(02 01)
# add_question_standard(02 02)
# add_question_standard(02 03)
# add_question_standard(02 04)
# add_question_standard(02 05)
# add_question_standard(02 06)
# add_question_standard(02 07)
# add_question_standard(02 08)
add_question_standard(03 01)
add_question_standard(03 02)
add_question_standard(03 03)
add_question_standard(03 04)
add_question_standard(03 05)
add_question_standard(03 06)